--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jrobic/react-scripts",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "Configuration and scripts for Create React App.",
   "repository": "jrobic/create-react-app",
   "license": "MIT",
@@ -21,6 +21,9 @@
     "react-scripts": "./bin/react-scripts.js"
   },
   "dependencies": {
+    "@storybook/addon-info": "^3.4.3",
+    "@storybook/addon-jest": "^3.4.3",
+    "@storybook/addon-knobs": "^3.4.3",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -53,6 +56,9 @@
     "raf": "3.4.0",
     "react-dev-utils": "^5.0.1",
     "resolve": "1.6.0",
+    "@storybook/react": "^3.4.3",
+    "@storybook/addon-actions": "^3.4.3",
+    "@storybook/addon-links": "^3.4.3",
     "style-loader": "0.19.0",
     "styled-components": "^3.2.6",
     "sw-precache-webpack-plugin": "0.11.4",
