--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -21,9 +21,12 @@
     "react-scripts": "./bin/react-scripts.js"
   },
   "dependencies": {
+    "@storybook/addon-actions": "^3.4.3",
     "@storybook/addon-info": "^3.4.3",
     "@storybook/addon-jest": "^3.4.3",
     "@storybook/addon-knobs": "^3.4.3",
+    "@storybook/addon-links": "^3.4.3",
+    "@storybook/react": "^3.4.3",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -38,27 +41,32 @@
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "husky": "^0.14.3",
     "jest": "20.0.4",
+    "lint-staged": "^7.1.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
+    "prettier": "^1.12.1",
+    "prettier-eslint": "^8.8.1",
+    "pretty-quick": "^1.4.1",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react-dev-utils": "^5.0.1",
     "resolve": "1.6.0",
-    "@storybook/react": "^3.4.3",
-    "@storybook/addon-actions": "^3.4.3",
-    "@storybook/addon-links": "^3.4.3",
     "style-loader": "0.19.0",
     "styled-components": "^3.2.6",
     "sw-precache-webpack-plugin": "0.11.4",
